// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListView renders as bullet list 1`] = `
<div>
  <div
    class="mc-c-bybahD"
    data-node-view-wrapper=""
    style="white-space: normal; pointer-events: unset;"
  >
    <ul
      data-list-view=""
    />
  </div>
</div>
`;

exports[`ListView renders as ordered list 1`] = `
<div>
  <div
    class="mc-c-fEhhnJ"
    data-node-view-wrapper=""
    style="white-space: normal; pointer-events: unset;"
  >
    <ol
      data-list-view=""
    />
  </div>
</div>
`;

exports[`ListView renders as task list 1`] = `
<div>
  <div
    class="mc-c-dytFtL"
    data-node-view-wrapper=""
    style="white-space: normal; pointer-events: unset;"
  >
    <ul
      data-list-view=""
    />
  </div>
</div>
`;
